[build-system]
requires = ['setuptools', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name='pyforcedirectedlayout'
dynamic = ["version"]
description = 'Python Implementation of a Force Directed Layout Algorithm'
readme = "README.md"
license = 'AGPL-1.0-or-later'
authors = [{name = 'Humberto A. Sanchez II', email = 'Humbert.A.Sanchez.II@gmail.com'}]
maintainers = [{name = 'Humberto A. Sanchez II', email = 'Humbert.A.Sanchez.II@gmail.com'}]
keywords = ['layout', 'diagram', 'python',]

dependencies = [
    'codeallybasic>=1.30.0',
]

[project.optional-dependencies]
test = [
    'mypy==1.19.1',
    'html-testRunner~=1.2.1',
]

deploy = [
    'wheel==0.46.3',
    'setuptools==82.0.1',
    'twine==6.2.0',
    'build==1.2.2.post1',
]

demo = [
    'wxPython==4.2.4',
]

[project.urls]
Repository = 'https://github.com/py-force-directed-layout'


[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
pyfdl = ['py.typed']

[tool.setuptools.dynamic]
version = {attr = 'pyforcedirectedlayout.__version__'}
